Images height fixed

--- a/arquitectura.html
+++ b/arquitectura.html
@@ -38,21 +38,21 @@
                 <div class="carousel-inner" role="listbox">
                     <div class="carousel-item active">
                         <div class="col-md-4">
-                            <img class="d-block img-fluid img-vert" style="width:100%" src="images/Exteriores/ver1/1.jpg" alt="First slide">
+                            <img class="d-block img-fluid img-vert-int" style="width:100%" src="images/Exteriores/ver1/1.jpg" alt="First slide">
                         </div>
                         <div class="col-md-4">
-                            <img class="d-block img-fluid img-vert" style="width:100%" src="images/Exteriores/ver1/2.jpg" alt="Second slide">
+                            <img class="d-block img-fluid img-vert-int" style="width:100%" src="images/Exteriores/ver1/2.jpg" alt="Second slide">
                         </div>
                         <div class="col-md-4">
-                            <img class="d-block img-fluid img-vert" style="width:100%" src="images/Exteriores/ver1/3.jpg" alt="Third slide">
+                            <img class="d-block img-fluid img-vert-int" style="width:100%" src="images/Exteriores/ver1/3.jpg" alt="Third slide">
                         </div>
                     </div>
                     <div class="carousel-item">
                         <div class="col-md-4">
-                            <img class="d-block img-fluid img-vert" style="width:100%" src="images/Exteriores/ver1/4.jpg" alt="Fourth slide">
+                            <img class="d-block img-fluid img-vert-int" style="width:100%" src="images/Exteriores/ver1/4.jpg" alt="Fourth slide">
                         </div>
                         <div class="col-md-4">
-                            <img class="d-block img-fluid img-vert" style="width:100%" src="images/Exteriores/ver1/5.jpg" alt="Fourth slide">
+                            <img class="d-block img-fluid img-vert-int" style="width:100%" src="images/Exteriores/ver1/5.jpg" alt="Fourth slide">
                         </div>
                     </div>
                 </div>
@@ -65,14 +65,16 @@
             <div id="carouselExampleControls" class="carousel slide col" data-ride="carousel">
                 <div class="carousel-inner" role="listbox">
                     <div class="carousel-item active">
-                        <div class="col-md-4">
-                            <img class="d-block img-fluid img-hor1" style="width:100%" src="images/Exteriores/hor1/1.jpg" alt="First slide">
+                        <div class="col-md-6">
+                            <img class="d-block img-fluid img-hor1-arq" style="width:100%" src="images/Exteriores/hor1/1.jpg" alt="First slide">
                         </div>
-                        <div class="col-md-4">
-                            <img class="d-block img-fluid img-hor1" style="width:100%" src="images/Exteriores/hor1/2.jpg" alt="Second slide">
+                        <div class="col-md-6">
+                            <img class="d-block img-fluid img-hor1-arq" style="width:100%" src="images/Exteriores/hor1/2.jpg" alt="Second slide">
                         </div>
-                        <div class="col-md-4">
-                            <img class="d-block img-fluid img-hor1" style="width:100%" src="images/Exteriores/hor1/3.jpg" alt="Third slide">
+                    </div>
+                    <div class="carousel-item">
+                        <div class="col-md-6">
+                            <img class="d-block img-fluid img-hor1-arq" style="width:100%" src="images/Exteriores/hor1/3.jpg" alt="Third slide">
                         </div>
                     </div>
                 </div>
