--- a/interiores.html
+++ b/interiores.html
@@ -76,24 +76,24 @@
                 <div class="carousel-inner" role="listbox">
                     <div class="carousel-item active">
                         <div class="col-md-4">
-                            <img class="d-block img-fluid img-vert" style="width:100%" src="images/Interiores/vertical/1.jpg" alt="First slide">
+                            <img class="d-block img-fluid img-vert-int" style="width:100%" src="images/Interiores/vertical/1.jpg" alt="First slide">
                         </div>
                         <div class="col-md-4">
-                            <img class="d-block img-fluid img-vert" style="width:100%" src="images/Interiores/vertical/2.jpg" alt="Second slide">
+                            <img class="d-block img-fluid img-vert-int" style="width:100%" src="images/Interiores/vertical/2.jpg" alt="Second slide">
                         </div>
                         <div class="col-md-4">
-                            <img class="d-block img-fluid img-vert" style="width:100%" src="images/Interiores/vertical/3.jpg" alt="Third slide">
+                            <img class="d-block img-fluid img-vert-int" style="width:100%" src="images/Interiores/vertical/3.jpg" alt="Third slide">
                         </div>
                     </div>
                     <div class="carousel-item">
                         <div class="col-md-4">
-                            <img class="d-block img-fluid img-vert" style="width:100%" src="images/Interiores/vertical/4.jpg" alt="Third slide">
+                            <img class="d-block img-fluid img-vert-int" style="width:100%" src="images/Interiores/vertical/4.jpg" alt="Third slide">
                         </div>
                         <div class="col-md-4">
-                            <img class="d-block img-fluid img-vert" style="width:100%" src="images/Interiores/vertical/5.jpg" alt="First slide">
+                            <img class="d-block img-fluid img-vert-int" style="width:100%" src="images/Interiores/vertical/5.jpg" alt="First slide">
                         </div>
                         <div class="col-md-4">
-                            <img class="d-block img-fluid img-vert" style="width:100%" src="images/Interiores/vertical/6.jpg" alt="Second slide">
+                            <img class="d-block img-fluid img-vert-int" style="width:100%" src="images/Interiores/vertical/6.jpg" alt="Second slide">
                         </div>
                     </div>
                 </div>
@@ -106,21 +106,23 @@
             <div id="carouselExampleControls" class="carousel slide col" data-ride="carousel">
                 <div class="carousel-inner" role="listbox">
                     <div class="carousel-item active">
-                        <div class="col-md-4">
+                        <div class="col-md-6">
                             <img class="d-block img-fluid" style="width:100%" src="images/Interiores/hor2/1.jpg" alt="First slide">
                         </div>
-                        <div class="col-md-4">
+                        <div class="col-md-6">
                             <img class="d-block img-fluid" style="width:100%" src="images/Interiores/hor2/2.jpg" alt="Second slide">
-                        </div>
-                        <div class="col-md-4">
-                            <img class="d-block img-fluid" style="width:100%" src="images/Interiores/hor2/3.jpg" alt="Third slide">
                         </div>
                     </div>
                     <div class="carousel-item">
-                        <div class="col-md-4">
+                        <div class="col-md-6">
+                            <img class="d-block img-fluid" style="width:100%" src="images/Interiores/hor2/3.jpg" alt="Third slide">
+                        </div>
+                        <div class="col-md-6">
                             <img class="d-block img-fluid" style="width:100%" src="images/Interiores/hor2/4.jpg" alt="First slide">
                         </div>
-                        <div class="col-md-4">
+                    </div>
+                    <div class="carousel-item">
+                        <div class="col-md-6">
                             <img class="d-block img-fluid" style="width:100%" src="images/Interiores/hor2/5.jpg" alt="Second slide">
                         </div>
                     </div>
