--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
                         <div class="row">
                             <div class="col-md-2"></div>
                             <div class="col-md-8">
-                                <form class="contact" action="index.html" method="post">
+                                <form class="contact" action="mailto:ad.render.contacto@gmail.com" method="post">
                                     <h4>Contacta con nosotros</h4>
                                     <div class="container">
                                         <div class="row">
