--- a/maquetas.html
+++ b/maquetas.html
@@ -38,34 +38,34 @@
                 <div class="carousel-inner" role="listbox">
                     <div class="carousel-item active">
                         <div class="col-md-6">
-                            <img class="d-block img-fluid img-hor1" style="width:100%" src="images/Maquetas/hor1/1.jpg" alt="First slide">
+                            <img class="d-block img-fluid img-hor1-arq" style="width:100%" src="images/Maquetas/hor1/1.jpg" alt="First slide">
                         </div>
                         <div class="col-md-6">
-                            <img class="d-block img-fluid img-hor1" style="width:100%" src="images/Maquetas/hor1/2.jpg" alt="Second slide">
-                        </div>
-                    </div>
-                    <div class="carousel-item">
-                        <div class="col-md-6">
-                            <img class="d-block img-fluid img-hor1" style="width:100%" src="images/Maquetas/hor1/3.jpg" alt="Third slide">
-                        </div>
-                        <div class="col-md-6">
-                            <img class="d-block img-fluid img-hor1" style="width:100%" src="images/Maquetas/hor1/4.jpg" alt="Second slide">
+                            <img class="d-block img-fluid img-hor1-arq" style="width:100%" src="images/Maquetas/hor1/2.jpg" alt="Second slide">
                         </div>
                     </div>
                     <div class="carousel-item">
                         <div class="col-md-6">
-                            <img class="d-block img-fluid img-hor1" style="width:100%" src="images/Maquetas/hor1/5.jpg" alt="Third slide">
+                            <img class="d-block img-fluid img-hor1-arq" style="width:100%" src="images/Maquetas/hor1/3.jpg" alt="Third slide">
                         </div>
                         <div class="col-md-6">
-                            <img class="d-block img-fluid img-hor1" style="width:100%" src="images/Maquetas/hor1/6.jpg" alt="Second slide">
+                            <img class="d-block img-fluid img-hor1-arq" style="width:100%" src="images/Maquetas/hor1/4.jpg" alt="Second slide">
                         </div>
                     </div>
                     <div class="carousel-item">
                         <div class="col-md-6">
-                            <img class="d-block img-fluid img-hor1" style="width:100%" src="images/Maquetas/hor1/7.jpg" alt="Second slide">
+                            <img class="d-block img-fluid img-hor1-arq" style="width:100%" src="images/Maquetas/hor1/5.jpg" alt="Third slide">
                         </div>
                         <div class="col-md-6">
-                            <img class="d-block img-fluid img-hor1" style="width:100%" src="images/Maquetas/hor1/8.jpg" alt="Second slide">
+                            <img class="d-block img-fluid img-hor1-arq" style="width:100%" src="images/Maquetas/hor1/6.jpg" alt="Second slide">
+                        </div>
+                    </div>
+                    <div class="carousel-item">
+                        <div class="col-md-6">
+                            <img class="d-block img-fluid img-hor1-arq" style="width:100%" src="images/Maquetas/hor1/7.jpg" alt="Second slide">
+                        </div>
+                        <div class="col-md-6">
+                            <img class="d-block img-fluid img-hor1-arq" style="width:100%" src="images/Maquetas/hor1/8.jpg" alt="Second slide">
                         </div>
                     </div>
                 </div>
