Add in construction banner

--- a/assets/header.html
+++ b/assets/header.html
@@ -1,3 +1,16 @@
+<div class="notice">
+    <div class="wrapper">
+        <img src="images/cone.svg" alt="Construction Cone"/>
+        <p>
+            Este sitio está en construcción, visitanos en nuestra página de
+            Facebook
+            <a href="https://www.facebook.com/arquitectura.d.render/">
+                AD-render
+            </a>
+        </p>
+    </div>
+    <div class="banner-footer">Icons made by <a href="https://www.flaticon.com/authors/pixel-buddha" title="Pixel Buddha">Pixel Buddha</a> from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a> is licensed by <a href="http://creativecommons.org/licenses/by/3.0/" title="Creative Commons BY 3.0" target="_blank">CC 3.0 BY</a></div>
+</div>
 <header class="container">
     <div class="banner row">
         <div class="logo col-md-2">
